--- a/files/etc/openclash/config/quenx.yaml
+++ b/files/etc/openclash/config/quenx.yaml
@@ -32,34 +32,20 @@ proxy-groups:
   - AUTO-MIX
   - SELECT
   - DIRECT
-- name: PORT-GAME
-  type: select
-  disable-udp: false
-  proxies:
-  - DIRECT
-  - SELECT
 rule-providers:
   Game:
     type: file
     behavior: classical
     path: "./rule_provider/game.yaml"
-  PortGames:
+  PortGame:
     type: file
     behavior: classical
-    path: "./rule_provider/portgames.yaml"
-  PortTcp:
-    type: file
-    behavior: classical
-    path: "./rule_provider/PortTCP.yaml"
-  PortUdp:
-    type: file
-    behavior: classical
-    path: "./rule_provider/PortUDP.yaml"
+    path: "./rule_provider/portgame.yaml"
   Umum:
     type: file
     behavior: classical
     path: "./rule_provider/umum.yaml"
-  Indo:
+  indo:
     type: file
     behavior: classical
     path: "./rule_provider/indo.yaml"
@@ -86,10 +72,8 @@ rule-providers:
 rules:
 - RULE-SET,Umum,SERVER-UMUM
 - RULE-SET,Game,SERVER-GAME
-- RULE-SET,PortGames,PORT-GAME
-- RULE-SET,PortTcp,PORT-GAME
-- RULE-SET,PortUdp,PORT-GAME
-- RULE-SET,Indo,SERVER-UMUM
+- RULE-SET,PortGame,SERVER-GAME
+- RULE-SET,indo,SERVER-UMUM
 - RULE-SET,Sosmed,SERVER-UMUM
 - RULE-SET,Streaming,SERVER-UMUM
 - RULE-SET,Bankid,SERVER-UMUM
@@ -107,11 +91,11 @@ dns:
   nameserver:
     - 1.1.1.1
     - 8.8.8.8
-    - 1.0.0.1
-  fallback:
     - 9.9.9.9
+  fallback:
+    - 1.0.0.1
+    - 8.8.4.4
     - 149.112.112.112
-    - 208.67.222.222
 ntp:
   servers:
     - pool.ntp.org
