--- a/files/etc/openclash/config/quenx-mix.yaml
+++ b/files/etc/openclash/config/quenx-mix.yaml
@@ -59,12 +59,6 @@ proxy-groups:
   - MODEM1
   - MODEM2
   - DIRECT
-- name: PORT-GAME
-  type: select
-  disable-udp: false
-  proxies:
-  - DIRECT
-  - LB-2-MODEM
 - name: BLOCK-IKLAN
   type: select
   disable-udp: false
@@ -76,23 +70,15 @@ rule-providers:
     type: file
     behavior: classical
     path: "./rule_provider/game.yaml"
-  PortGames:
+  PortGame:
     type: file
     behavior: classical
-    path: "./rule_provider/portgames.yaml"
-  PortTcp:
-    type: file
-    behavior: classical
-    path: "./rule_provider/PortTCP.yaml"
-  PortUdp:
-    type: file
-    behavior: classical
-    path: "./rule_provider/PortUDP.yaml"
+    path: "./rule_provider/portgame.yaml"
   Umum:
     type: file
     behavior: classical
     path: "./rule_provider/umum.yaml"
-  Indo:
+  indo:
     type: file
     behavior: classical
     path: "./rule_provider/indo.yaml"
@@ -125,10 +111,8 @@ rule-providers:
 rules:
 - RULE-SET,Umum,SERVER-UMUM
 - RULE-SET,Game,SERVER-GAME
-- RULE-SET,PortGames,PORT-GAME
-- RULE-SET,PortTcp,PORT-GAME
-- RULE-SET,PortUdp,PORT-GAME
-- RULE-SET,Indo,SERVER-INDO
+- RULE-SET,PortGame,SERVER-GAME
+- RULE-SET,indo,SERVER-INDO
 - RULE-SET,Sosmed,SERVER-INDO
 - RULE-SET,Streaming,SERVER-UMUM
 - RULE-SET,Bankid,SERVER-INDO
@@ -147,11 +131,11 @@ dns:
   nameserver:
     - 1.1.1.1
     - 8.8.8.8
-    - 1.0.0.1
-  fallback:
     - 9.9.9.9
+  fallback:
+    - 1.0.0.1
+    - 8.8.4.4
     - 149.112.112.112
-    - 208.67.222.222
 ntp:
   servers:
     - pool.ntp.org
