--- a/files/etc/sysctl.conf
+++ b/files/etc/sysctl.conf
@@ -1,4 +1,10 @@
 # Ram 1024 and both buffers to 32
-# net.nf_conntrack_max=262144
+net.ipv6.conf.all.disable_ipv6=1
+net.ipv6.conf.default.disable_ipv6=1
+net.ipv6.conf.lo.disable_ipv6=1
+net.nf_conntrack_max=262144
+net.netfilter.nf_conntrack_buckets=65536
 net.core.rmem_max=33554432
 net.core.wmem_max=33554432
+net.core.rmem_default=262144
+net.core.wmem_default=262144
